--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -156,8 +156,8 @@
           padding-left: 0;
           padding-right: 0;
 
-          .input-view:last-child {
-            margin-bottom: 0;
+          .dropdown-tree-grid {
+            position: static !important;
           }
         }
       }
